--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,12 @@
 body {
   font-family: 'Poiret One', cursive;
-}
-
-#background {
+  padding: 0;
+  margin: 0;
   background: #59adeb; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(top, #0b5b97 0%, #2a75ae 26%, #7EBCEB 52%, #B3D7F4 75%, #ffffff 99%); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(top, #0b5b97 0%, #2a75ae 26%, #7EBCEB 52%, #B3D7F4 75%, #ffffff 99%); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(top, #0b5b97 0%, #2a75ae 26%, #7EBCEB 52%, #B3D7F4 75%, #ffffff 99%); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom, #0b5b97 0%,#2a75ae 26%,#7EBCEB 52%,#B3D7F4 75%,#ffffff 99%); /* Standard syntax */
+    background: -webkit-linear-gradient(top, #0b5b97 0%, #2a75ae 13%, #7EBCEB 36%, #B3D7F4 50%, #ffffff 75%); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(top, #0b5b97 0%, #2a75ae 13%, #7EBCEB 36%, #B3D7F4 50%, #ffffff 75%); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(top, #0b5b97 0%, #2a75ae 13%, #7EBCEB 36%, #B3D7F4 50%, #ffffff 75%); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom, #0b5b97 0%,#2a75ae 13%,#7EBCEB 36%,#B3D7F4 50%,#ffffff 75%); /* Standard syntax */
 }
 
 .font-white {
@@ -26,16 +25,21 @@ body {
   padding-right: 15px;
 }
 
-#currently {
-
-}
-
 #currently h1 {
   font-size: 8em;
 }
 
 #currently .icon {
   margin-top: 25px;
+}
+
+.inset {
+  margin: 10px 30px;
+}
+
+.button {
+  cursor: pointer;
+  margin-top: 50px;
 }
 
 .flex {
